# Flarr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bootable_usb.py  bootable_usb_simple.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_utils.py
