[project]
name = "bootable-usb-creator"
version = "1.0.0"
description = "A safe, user-friendly TUI tool for creating bootable USB drives"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Rosdyana Kusuma", email = "rosdyana.kusuma@gmail.com" }
]
keywords = ["usb", "bootable", "iso", "tui", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.45.0"]
dev = ["textual>=0.45.0", "pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
bootable-usb = "bootable_usb_simple:main"
bootable-usb-tui = "bootable_usb:main"

[project.urls]
Homepage = "https://github.com/yourusername/bootable-usb-creator"
Repository = "https://github.com/yourusername/bootable-usb-creator"
Issues = "https://github.com/yourusername/bootable-usb-creator/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bootable_usb", "bootable_usb_simple"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
